manifests_demoapp01/production/increase_replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp01
spec:
  replicas: 1
  revisionHistoryLimit: 1
