manifests_demoapp01/production/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp01-lb
  labels:
    app: demoapp01
spec:
  type: LoadBalancer
  ports:
  - name: demoapp01
    port: 80
    targetPort: 80
  selector:
    app: demoapp011
