manifests_demoapp01/production/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp01-ingress-rule
spec:
  ingressClassName: nginx
  rules:
  - host: demoapp01.tradingaps.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demoapp01-service
            port: 
              number: 5000
#  tls:
#  - hosts:
#      - demoapp01.tradingaps.com
#    secretName: demoapp01
